--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,34 @@
-# Compiled class file
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
 *.war
-*.nar
 *.ear
+*.nar
 *.zip
 *.tar.gz
 *.rar
-*.env
+*.log
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+/target/
+
+/surefire-reports/
+/failsafe-reports/
 
 .idea/
+*.iws
+*.iml
+*.ipr
+out/
+
+.DS_Store
+Thumbs.db
+
+*.env
+.env.local
+.env.*
+!env.template
+*.lock
+*.generated.xml
+hs_err_pid*
+replay_pid*
+heapdump*.hprof
+*.swp
